--- a/client/src/Portfolio-Container/Home/Profile/Profile.css
+++ b/client/src/Portfolio-Container/Home/Profile/Profile.css
@@ -11,6 +11,7 @@
 	align-items: center;
 	color: white;
 	width: inherit;
+	gap: 3rem;
 }
 
 .profile-detail-role {
@@ -60,7 +61,11 @@
 }
 
 .profile-options {
-	margin: 30px 0 15px 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 30px 0;
+	gap: 1.5rem;
 }
 
 .profile-picture {
@@ -181,7 +186,7 @@ i {
 		display: flex;
 		align-items: center;
 		flex-direction: column;
-		padding: 0 100px 0 100px;
+		gap: 1rem;
 	}
 
 	.profile-options button,
