--- a/client/src/index.css
+++ b/client/src/index.css
@@ -91,11 +91,11 @@ body ::-webkit-scrollbar-thumb {
 	border-radius: 50px;
 	padding: 14px 0;
 	width: 160px;
-	height: 44px;
 	cursor: pointer;
 	transition: 0.2s;
 	font-family: 'Poppins SemiBold';
 	position: relative;
+	font-size: 13px;
 }
 
 .btn:active {
@@ -103,10 +103,9 @@ body ::-webkit-scrollbar-thumb {
 }
 
 .primary-btn {
+	background-color: transparent;
 	color: white;
 	border: 2px solid white;
-	font-size: 12px;
-	margin-right: 20px;
 }
 
 .primary-btn::before {
@@ -123,7 +122,7 @@ body ::-webkit-scrollbar-thumb {
 }
 
 .primary-btn:hover::before {
-	transition: 0.5s all ease;
+	transition: 0.3s all ease;
 	left: 0;
 	right: 0;
 	opacity: 1;
@@ -132,7 +131,7 @@ body ::-webkit-scrollbar-thumb {
 }
 
 .primary-btn:hover::after {
-	transition: 0.5s all ease;
+	transition: 0.3s all ease;
 	left: -50%;
 	right: -50%;
 	opacity: 1;
@@ -147,89 +146,19 @@ body ::-webkit-scrollbar-thumb {
 }
 
 .highlighted-btn {
-	margin: 0 0 0 28px;
+	display: flex;
+	justify-content: center;
+	height: 22px;
 	color: white;
-	font-size: 12px;
 	background-color: var(--light-blue);
 	box-shadow: inset 0 0 0 0 white;
-	transition: ease-out 0.5s;
-}
-
-.highlighted-btn a {
-	width: 160px !important;
-	height: 44px;
+	text-decoration: none;
 }
 
 .highlighted-btn:hover {
+	transition: ease-out 0.3s;
 	box-shadow: inset 160px 0 0 0 white;
 	background-color: rgb(252, 252, 252);
-	color: var(--light-black);
-}
-
-/* ||||||||||||||||||||||| App Custom Dark Buttons ||||||||||||||||||||||| */
-.primary-btn-dark {
-	color: white;
-	border: 2px solid white;
-	font-size: 12px;
-	margin-right: 20px;
-}
-
-.primary-btn-dark::before {
-	content: '';
-	border-radius: 18px;
-	position: absolute;
-	top: 0;
-	left: 50%;
-	bottom: 0;
-	right: 50%;
-	z-index: -1;
-	background-color: var(--light-blue);
-	transform: scaleX(0);
-}
-
-.primary-btn-dark:hover::before {
-	transition: 0.5s all ease;
-	left: 0;
-	right: 0;
-	opacity: 1;
-	z-index: -1;
-	transform: scaleX(1);
-}
-
-.primary-btn-dark:hover::after {
-	transition: 0.5s all ease;
-	left: -50%;
-	right: -50%;
-	opacity: 1;
-	z-index: 1;
-	transform: scale(1);
-}
-
-.primary-btn-dark:hover {
-	color: white;
-	border: 2px solid var(--light-blue);
-	z-index: 1;
-}
-
-.highlighted-btn-dark {
-	margin: 0 0 0 28px;
-	color: white;
-	font-size: 12px;
-	background-color: var(--light-blue);
-	box-shadow: inset 0 0 0 0 white;
-	transition: ease-out 0.5s;
-	border: 0px;
-}
-
-.highlighted-btn-dark a {
-	width: 160px !important;
-	height: 44px;
-}
-
-.highlighted-btn-dark:hover {
-	box-shadow: inset 160px 0 0 0 white;
-	background-color: white;
-	border: 0px;
 	color: var(--light-black);
 }
 
